@@ -166,6 +166,13 @@ td.tagbox.selected-inverted {
 td.tagbox.inverted {
 	text-decoration: line-through;
 }
+a.tag-descr {
+	border-bottom: 1px dashed;
+}
+span.tag-descr {
+	border-bottom: 1px dashed;
+	cursor: help;
+}
 
 td.sticker {
 	text-align: left;
