@@ -4,6 +4,7 @@
 	update: ability to extend supported device breed list via plug-in
 	update: add a server configuration report (same as before install/upgrade)
 	new feature: "shared router" allocation (GH#210 by Vladimir Ivanov)
+	new feature: optional tag descriptions
 0.21.1 2017-10-22
 	update: improve Percona server support (Mantis#1793)
 	bugfix: fix an upgrade bug introduced in 0.21.0 (found by Chris James)
